# libvmod-geoip2

./: Makefile.am  README.rst  configure.ac
src/: Makefile.am  vmod_geoip2.c  vmod_geoip2.vcc
src/tests/: test01.vtc  test02.vtc  test03.vtc  test04.vtc
